<resources>
    <string name="app_name">視聽障輔助</string>

    <string name="app_menu">應用程式選單</string>
    <string name="btn_help">使用協助</string>

    <string name="visual_button">進入視障頁面</string>
    <string name="visual_main">視障穿戴式裝置</string>
    <string name="layout_glasses">智慧眼鏡</string>
    <string name="layout_bracelet">智慧手環</string>

    <string name="hearing_button">進入聽障頁面</string>
    <string name="hearing_main">聽障穿戴式裝置</string>
    <string name="layout_glove_dev">智慧手套</string>

    <string name="help_dialog">TalkBack操作指引</string>
    <string name="btn_click_to_setting">連續點擊轉往管理頁面</string>
    <string name="help_message">單指點擊導讀\n單指雙擊確認\n雙指滑動選單</string>
    <string name="btn_ok">確認</string>

    <string name="bracelet_control">手環控制頁面</string>
    <string name="btn_bracelet_distance">手環距離偵測</string>
    <string name="btn_bracelet_color">手環顏色辨識</string>
    <string name="btn_bracelet_search">尋找手環</string>

    <string name="app_manage">管理頁面</string>
    <string name="layout_search_device">搜尋裝置</string>
    <string name="layout_app_setting">應用程式設定</string>

    <string name="search_device">搜尋裝置頁面</string>

    <string name="app_setting">應用程式設定頁面</string>
    <string name="txt_set_vibrate_level">調整震動強度</string>
    <string name="accept_dialog">是否儲存設定</string>
    <string name="btn_cancel">取消</string>

    <string name="glove_control">手套控制頁面</string>
    <string name="layout_glove_control_recognize">開始辨識</string>
    <string name="layout_glove_control_recognizing">正在辨識</string>
    <string name="layout_glove_control_reset">手套重置</string>

    <string name="hearing_setting">手勢管理頁面</string>
    <string name="btn_record_gesture">錄製手勢</string>
    <string name="btn_gesture_db">手勢資料庫</string>

    <string name="record_gesture">錄製手勢頁面</string>
    <string name="textView_record_description">手勢停止三秒後\n自動停止手語錄製</string>
    <string name="textView_recording">錄製中</string>
    <string name="textView_saving_record">儲存中</string>
    <string name="btn_start_record">開始錄製</string>
    <string name="btn_stop_record">停止錄製</string>
    <string name="save_dialog">手勢詳細資料</string>

    <string name="gesture_db">手勢資料庫頁面</string>

    <string name="device_connected">已連線</string>
    <string name="device_disconnected">未連線</string>
    <!--
    Glass
    -->
    <string name="error_bluetooth_not_supported">裝置不支援藍芽</string>
    <string name="unknown_device">未知裝置</string>
    <string name="txt_set_glass_threshold">設定眼鏡偵測距離</string>
    <string name="txt_glass_front_threshold">前方距離</string>
    <string name="txt_glass_side_threshold">側邊距離</string>

    <!--
    Bracelet
    -->
    <string name="txt_set_bracelet_feature">設定手環功能</string>
    <string name="txt_bracelet_distance">距離偵測</string>
    <string name="txt_bracelet_color">顏色偵測</string>

    <!--
    Glove
    -->
    <string name="txt_glove_setting">進入手套設定頁</string>

    <string name="ui_text_connection">Connection</string>
    <string name="ui_text_recognition">Recognition</string>
    <string name="ui_text_reset">Reset</string>
    <string name="ui_text_record">Record</string>
    <string name="ui_text_recording">Recording</string>
    <string name="ui_text_recognize">Recognize</string>
    <string name="ui_text_recognizing">Recognizing</string>
    <string name="ui_text_database">Database</string>
    <string name="ui_text_datarecord">Data Records</string>
    <string name="ui_text_lefthand">Left Hand</string>
    <string name="ui_text_righthand">Right Hand</string>
    <string name="ui_text_leftposition">Left Position</string>
    <string name="ui_text_rightposition">Right Position</string>
    <string name="ui_text_leftrssi">Left RSSI</string>
    <string name="ui_text_rightrssi">Right RSSI</string>
    <string name="ui_text_result">Result: </string>

    <string name="str_string_filename">Filename</string>
    <string name="str_extension_csv">.csv</string>

    <string name="error_ble_not_supported">BLE is not supported.</string>
    <string name="error_no_devices_found">No devices found</string>
    <string name="error_same_device">Pls select different devices.</string>

</resources>
