<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tw.edu.ntust.jojllman.wearableapplication.BraceletControlActivity">

    <Button
        android:contentDescription="@string/btn_bracelet_distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/btn_bracelet_distance"
        android:text="@string/btn_bracelet_distance"
        android:textSize="@dimen/font_size_mid"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:onClick="OnDistanceClick"
        android:background="@drawable/button_with_border"
        android:layout_weight="5"/>

    <Button
        android:contentDescription="@string/btn_bracelet_color"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/btn_bracelet_color"
        android:text="@string/btn_bracelet_color"
        android:textSize="@dimen/font_size_mid"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:onClick="OnColorClick"
        android:background="@drawable/button_with_border"
        android:layout_weight="5"/>

    <Button
        android:contentDescription="@string/btn_bracelet_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/btn_bracelet_search"
        android:text="@string/btn_bracelet_search"
        android:textSize="@dimen/font_size_mid"
        android:onClick="OnSearchClick"
        android:background="@drawable/button_with_border"
        android:layout_weight="3"/>
</LinearLayout>
