<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.edu.ntust.jojllman.wearableapplication.VisualSupportActivity"
    android:background="#000000"
    android:weightSum="20">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:contentDescription="@string/layout_glasses"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:weightSum="10"
        android:background="@drawable/button_with_border_new"
        android:onClick="OnDeviceClick"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="26dp"
            android:layout_alignParentLeft="true"
            android:layout_weight="6"
            android:weightSum="12"
            android:id="@+id/layout_glass_dev"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_weight="6"
                android:textColor="#FFFFFF"
                android:text="@string/layout_glasses" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="裝置 未連線"
                android:gravity="center"
                android:ellipsize="end"
                android:textSize="25sp"
                android:layout_weight="3"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="電量 0%"
                android:gravity="top"
                android:textSize="25sp"
                android:layout_weight="3"
                android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:layout_weight="4">
            <Button
                android:id="@+id/glass_btn"
                android:text="藍芽斷線"
                android:textColor="#ffffff"
                android:textSize="19sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:paddingTop="25dp"
                android:drawablePadding="-20dp"
                android:drawableTop="@drawable/ic_power_new"
                android:background="@drawable/support_bg"
                android:textStyle="bold" />
            <Button
                android:id="@+id/tag_btn"
                android:text="智慧標籤開啟"
                android:textColor="#ffffff"
                android:textSize="19sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:drawablePadding="-20dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:drawableTop="@drawable/ic_power_new"
                android:background="@drawable/support_bg"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:contentDescription="@string/layout_bracelet"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@drawable/button_with_border_new"
        android:weightSum="10"
        android:orientation="horizontal"
        android:onClick="OnDeviceClick"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="26dp"
            android:layout_alignParentLeft="true"
            android:layout_weight="5"
            android:gravity="left"
            android:id="@+id/layout_bracelet_dev"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_bracelet"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_weight="6"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="裝置 未連線"
                android:gravity="left"
                android:width="200dp"
                android:maxLines="2"
                android:textSize="25sp"
                android:layout_weight="3"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="電量 0%"
                android:gravity="top"
                android:textSize="25sp"
                android:layout_weight="3"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="5">
            <Button
                android:id="@+id/ring_btn"
                android:text="藍芽斷線"
                android:textColor="#ffffff"
                android:textSize="19sp"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingTop="55dp"
                android:drawablePadding="-55dp"
                android:paddingLeft="9dp"
                android:drawableTop="@drawable/ic_power_new"
                android:background="@drawable/support_bg"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:contentDescription="@string/layout_search_device"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#ffb21a"
        android:id="@+id/layout_visual_search_dev"
        android:onClick="OnDeviceClick"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/layout_search_device"
            android:textSize="40sp"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:contentDescription="@string/layout_app_setting"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#787777"
        android:id="@+id/layout_setting"
        android:onClick="OnDeviceClick"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/layout_app_setting"
            android:textSize="40sp"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</LinearLayout>
